--- a/Animation.css
+++ b/Animation.css
@@ -66,12 +66,15 @@
     0%, 100% {
         transform: translateY(0) translateX(0);
     }
+
     25% {
         transform: translateY(-15px) translateX(5px);
     }
+
     50% {
         transform: translateY(0) translateX(0);
     }
+
     75% {
         transform: translateY(-15px) translateX(-5px);
     }
@@ -79,14 +82,52 @@
 
 @keyframes Orbite {
 
-        0% {
-          transform: rotate(0deg) translateX(300px) rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg) translateX(300px) rotate(-360deg);
-        }
-      }
+    0% {
+        transform: rotate(0deg) translateX(300px) rotate(0deg);
+    }
 
+    100% {
+        transform: rotate(360deg) translateX(300px) rotate(360deg);
+    }
+}
+
+
+.floating {
+    position: relative;
+    animation: floatAnimation 5s ease-in-out infinite;
+    transform-origin: center top; /* Set the pivot point at the bottom center */
+}
+
+.ImageCentre {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    z-index: 2;
+    top: 300px;
+    bottom: 200px;
+    left: 0px;
+}
+
+.map {
+    padding-bottom: 500px;
+}
+
+.satellite {
+    position: sticky;
+    width: 50px;
+    height: 50px;
+    top: 100px;
+    bottom: 0px;
+    left: 100px;
+    right: 0px;
+    border-radius: 0%;
+    animation: Orbite 15s linear infinite;
+}
+
+    .satellite:hover {
+        animation-play-state: paused;
+        transform: scale(2);
+    }
 
 
 .SlideInLeft {
@@ -113,12 +154,6 @@
 
 .SlideInDawn {
     animation: SlideInDawn 1s ease-in;
-}
-
-.floating {
-    position: relative;
-    animation: floatAnimation 5s ease-in-out infinite;
-    transform-origin: center top; /* Set the pivot point at the bottom center */
 }
 
 
