--- a/Style1.css
+++ b/Style1.css
@@ -9,9 +9,20 @@ html, body {
     background-position: center bottom; /* Aligns the bottom of the image with the bottom of the container */
 }
 p {
+    color: black;
+    position: relative;
+    width: contain;
+    font-family: Calibri;
+    font-size: 28px;
+}
+
+p2 {
     color: white;
     position: relative;
-
+    width: contain;
+    font-family: Calibri;
+    font-size: 28px;
+    text-align:left;
 }
 
 .image2droite {
@@ -30,7 +41,7 @@ p {
     float: left;
     position:relative;
     width: 500px;
-    height: 500px;
+    height: 200px;
     top: 0 px;
     left:100 px;
     right: 100 px;
@@ -65,14 +76,14 @@ p {
 
 .content {
     padding: 50px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(250, 250, 250, 0.9);
     scrollbar-color: red;
     /* Other styles for your content */
 }
 
 .content2 {
     padding: 50px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.9);
     text-align: left;
     /* Other styles for your content */
 }
